--- a/app/src/main/res/layout/activities/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/activities/layout/fragment_user_profile.xml
@@ -77,7 +77,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/circleView_user_profile" />
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/settings"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
 
